# shop-automation-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  conftest.py  helpers.py  index.html  marks.py  pyproject.toml
.github/workflows/: tests.yml
components/: catalog.py  header.py
data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 140ecc160588b538.webm  160fdc056dcb2f9c.html  28019b93a04087e.html  2a1720b29b2bb307.html  3126f08eba4e1d4b.webm  33e792eeaa1db52b.html  3ead0ac369a26db7.txt  4c4e202f223b4015.html  51b4ca2dc30f6ad6.html  55f31555a2a1fd2c.webm  58da50b85ed93c79.html  6aa3efa69110d214.html  6ebf679b5ae130c8.html  716efc409d49c675.webm  76bd66d9416c4d82.txt  798f457e59537311.html  939624ce7e65413f.webm  96507eb66ad374cf.html  9784ae1a1a54df44.webm  9a01839c7d530900.html  9e29644720ce68e5.html  a56c708a1d3eac16.html  b0d268bd68204038.webm  b315fdf75f20f520.html  b909a04ad6472a5d.html  (+13 more)
docs/: code_style.md  locator_style.md
env/: .env.prod
export/: influxDbData.txt  prometheusData.txt
fixtures/: add_console_to_allure_fixtures.py  add_network_to_allure_fixtures.py  attach_fixtures.py  components_fixtures.py  pages_fixtures.py  run_only_required_tests.py
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: test_catalog.py  test_search.py
widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
(+15 files in other folders)
